[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Monsters_Creatures_Fantasy/Goblin/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 15.875, 18.25 )

[sub_resource type="Animation" id=53]
resource_name = "Attack"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
} ]
}

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24 ]
}

[sub_resource type="Animation" id=52]
resource_name = "Walk"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 24 ]
}

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 17, 18.25 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 17, 18.25 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 437, 305 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 25 )

[node name="EnemyHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
position = Vector2( -0.125, 8.25 )
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 28
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Attack = SubResource( 53 )
anims/RESET = SubResource( 51 )
anims/Walk = SubResource( 52 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.14902, 0, 1, 1 )
self_modulate = Color( 0, 0.0392157, 1, 1 )
position = Vector2( 27, 8.25 )
shape = SubResource( 24 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 27, 8.25 )
shape = SubResource( 23 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, -18 )
enabled = true
collision_mask = 2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
